modifico textos en index y nuevo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="app">
         <h1>Ejemplo</h1>
-        <h1>TextoTexto</h1>
+        <h1>Texto nuevo otra vex</h1>
     </div>
 </body>
 </html>
