--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div class="app">
         <h1>Ejemplo</h1>
-        <h1>Texto nuevo otra vex</h1>
+        <h1>Texto nuevo otra vezx</h1>
+        <h1>Texto nuevo otra vez22222222x</h1>
     </div>
 </body>
 </html>
